<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".mvvm.dashboard_supir_sobat.popup.PopUpPilihJenisBantuan">

    <!--TODO : Integrate databinding, mvvm, content description, accesibility ignore-->

    <ImageView
        android:layout_width="@dimen/dimen_16dp"
        android:layout_height="@dimen/dimen_16dp"
        android:layout_margin="@dimen/dimen_8dp"
        android:layout_gravity="start"
        app:srcCompat="@drawable/ic_arrow_back_24dp"
        android:contentDescription="@string/kembali" />

    <ImageView
        android:layout_width="@dimen/dimen_72dp"
        android:layout_height="@dimen/dimen_72dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/volunteer" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:text="@string/tentukan_bantuan_yang_akan_diberikan"
        android:textSize="@dimen/text_14sp"
        android:textColor="@android:color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sampai_tujuan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:textStyle="bold"
        app:backgroundTint="#2B9AF3"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="@string/antar_sampai_tujuan" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sampai_kendaraan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        style="@style/button"
        android:textAllCaps="true"
        android:padding="0dp"
        android:textColor="@android:color/black"
        android:text="@string/bantu_sampai_naik_kendaraan" />
</LinearLayout>